svg set as bg image fixes all my alignment issues. note left for tomorrow

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5879,7 +5879,7 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.box1 {
+.box1, .box1__astronaut-ryan {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5887,13 +5887,20 @@ a:link {
   -ms-flex: 1;
   flex: 1; }
 
+.box1__astronaut-ryan {
+  background-image: url(../../img/svg/astronaut-ryan.svg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  margin-top: 2vmin; }
+
 .box2 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex: 2;
   -ms-flex: 2;
-  flex: 2; }
+  flex: 2;
+  background-color: #d1cfc7; }
 
 .box3 {
   display: -webkit-flex;
