--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5879,13 +5879,20 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.box1 {
+.box1, .box1__astronaut-ryan {
   display: flex;
   flex: 1; }
 
+.box1__astronaut-ryan {
+  background-image: url(../../img/svg/astronaut-ryan.svg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  margin-top: 2vmin; }
+
 .box2 {
   display: flex;
-  flex: 2; }
+  flex: 2;
+  background-color: #d1cfc7; }
 
 .box3 {
   display: flex;
